[package]
name = "hrandr"
version = "0.1.1"
edition = "2021"
description = "Small tool to move monitors around for Hyprland"
license  = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
